Change handling of ArchiveMemberPath/ArchiveMemberSourcePath
Summary:
This removes SourcePathResolver.getRelativeArchiveMemberPath() and
forces users to understand the ArchiveMemberSourcePath themselves.

This allows changing rulekey calculation to not create an
ArchiveMemberPath and change it's function to just grab the two Path out
of ArchiveMemberSourcePath.

A couple of other optimizations depend on this change.

Reviewed By: sbalabanov

fbshipit-source-id: 74f91cde24